@@ -149,8 +149,8 @@ var_from_call <- function(x){
 # find a symbol in a call. Returns a list of multi-indices.
 # occurrences of variable names in a function signature are skipped.
 which.call <- function(x, what, I=1, e=as.environment(list(n=0))){
-  # skip signatures (=pairlist)
-  if (!is.pairlist(x) && x == what){
+  # is.symbol filters constants such as NA 
+  if ( is.symbol(x) && x == what ){
     e[[paste0('x',e$n)]] <- I
     e$n <- e$n + 1
   }
@@ -311,7 +311,7 @@ vectorize <- function(x){
   # modify.
   if ( length(x) == 1 || x[[1]] == "function") return(x)
   for ( i in seq_along(x) ){
-    if ( x[[i]] == "if" ){
+    if ( is.symbol(x[[i]]) && x[[i]] == "if" ){
       return(vectorize(replace_if(x)))
     } else {
       x[[i]] <- vectorize(x[[i]])
