@@ -1,6 +1,7 @@
 version 0.2.2
 - fixed (harmless) compiler warning (thanks to Brian Ripley)
 - bugfix: empty [] selection on expressionset crashed (thanks to Anne Petersen)
+- bugfix: NA in validating expression would crash parser (thanks to Masafumi Okada)
 
 version 0.2.1
 - Set membership operator %in% is now replaced with %vin% (#80).
